--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="key_equals">=</string>
     <string name="key_0">0</string>
     <string name="key_dot">.</string>
+    <string name="entry_field"></string>
 </resources>
