--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="key_0">0</string>
     <string name="key_dot">.</string>
     <string name="entry_field"></string>
+    <string name="calculator">Calculator</string>
+    <string name="themes_day">Themes Day</string>
+    <string name="themes_night">Themes Night</string>
 </resources>
